# vyakata-course-gen-pipeline

HTB - CWEE - Certification Learning Path/HTB - CWEE - Certification Learning Path/: HTB Certified Web Exploitation Expert - Learning Path.url
HTB - CWEE - Certification Learning Path/HTB - CWEE - Reviews, etc/: An Overview of CWEE - 21y4d - HackTheBox Cyber Apocalypse CTF 2024 - YouTube.url  Detect hard-to-find vulnerabilities with the new HTB CWEE.url  I CWEE What You Did There - How to Become a Certified Web Exploitation Expert - YouTube.url  So Hack The Box Made a Web Cert- - YouTube.url  (+2 more)
vyakta-pipeline/: .env.example  Makefile  README.md  pyproject.toml
vyakta-pipeline/src/vyakta/: __init__.py  cli.py  config.py  models.py  pipeline.py
vyakta-pipeline/src/vyakta/llm/: __init__.py  client.py
vyakta-pipeline/src/vyakta/media/: __init__.py  config.py  models.py  pipeline.py
vyakta-pipeline/src/vyakta/media/assembly/: __init__.py  ffmpeg.py
vyakta-pipeline/src/vyakta/media/visuals/: __init__.py  puppeteer.py  puppeteer_render.js  renderer.py
vyakta-pipeline/src/vyakta/media/visuals/templates/: slide.html
vyakta-pipeline/src/vyakta/media/voice/: __init__.py  base.py  kyutai.py  openai.py
vyakta-pipeline/src/vyakta/prompts/: __init__.py  architect.py  normalizer.py  planner.py  scriptor.py
vyakta-pipeline/src/vyakta/stages/: __init__.py  architect.py  base.py  normalizer.py  planner.py  scriptor.py
vyakta-pipeline/tests/: test_media.py  test_models.py  test_pipeline.py  test_stages.py
vyakta-pipeline/tests/fixtures/: sample_raw.html
