[project]
name = "vyakta-pipeline"
version = "0.3.0"
description = "Production-grade async course generation pipeline for cybersecurity content."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Eshan Singh", email = "example@example.com" }]
dependencies = [
    "anthropic>=0.28",
    "openai>=1.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "beautifulsoup4>=4.12",
    "structlog>=24.1",
    "tqdm>=4.66",
    "json-repair>=0.20",
    "aiofiles>=23.0",
    "tiktoken>=0.7",
    "jinja2>=3.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
vyakta = "vyakta.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vyakta"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
